<resources>
    <string name="app_name" translatable="false">Glider Connect</string>
    <string name="hello_world_eseo">Hello World ESEO!</string>
    <string name="txt_btn_click_me">click me !</string>
    <string name="logo_eseo" translatable="false">logo_eseo</string>
    <string name="txt_toast_long">its a very long toast</string>
    <string name="push_me">Push me !</string>
    <string name="your_title">This is my title</string>
    <string name="your_message">This is my message</string>
    <string name="agree">This is a YES !</string>
    <string name="disagree">This is a NOPE !</string>
    <string name="title">my title</string>
    <string name="supporting_text">my supporting text</string>
    <string name="cancel">cancel</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="title_activity_splash_screen" translatable="false">Splash_screen</string>
    <string name="settings">Settings</string>
    <string name="txt_long">There is a lot information here whaw !</string>
    <string name="onglet_splashscreen">activity Splashscreen</string>
    <string name="logo_plane" translatable="false">logo_plane</string>
    <string name="annee_scolaire" translatable="false">2023–2024</string>
    <string name="author" translatable="false">Martin COUTAULT</string>
    <string name="onglet_home">activity home</string>
    <string name="vers_historique">Vers historique</string>
    <string name="vers_localisation2">Vers Localisation</string>
    <string name="onglet_localisation">activity location</string>
    <string name="txt_lien_eseo">Link ESEO</string>
    <string name="carte_eseo">Map ESEO</string>
    <string name="onglet_historique">activity historic</string>
    <string name="onglet_scan">activity scan</string>
    <string name="lancer_le_scan">Start scanning</string>
    <string name="d_connexion">Disconnect</string>
    <string name="toggle_led">Toggle led</string>
    <string name="commander_via_internet">Command by internet</string>
    <string name="scanner_les_p_ripheriques">Scan devices</string>
    <string name="lien_eseo">ESEO link</string>
    <string name="scan_started">scan start</string>
    <string name="scan_ended">scan end</string>
    <string name="not_compatible">not compatible</string>
    <string name="attention">Warning</string>
    <string name="veuillez_activer_votre_localisation">Location needed to access all features. Do you want to access settings?</string>
    <string name="veuillez_activer_bluetooth">Location needed to access all features. Do you want to access settings?</string>
    <string name="connected_to">connect to</string>
    <string name="status_none">Status :none</string>
    <string name="connect_a">connecté a</string>
    <string name="uuid_not_found">UUID not found</string>
    <string name="not_connected">not connected</string>
    <string name="sub_title">Sub title</string>
    <string name="voir_localisation">voir localisation</string>
    <string name="trying_connection_to">"essai de se connecter à "</string>
</resources>