<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.Scan_activity">

    <TextView
        android:id="@+id/onglet_title_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onglet_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connecte_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/status_led"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/button_toggle_led"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:listitem="@layout/item_list" />

    <Button
        android:id="@+id/button_start_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lancer_le_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_deconnexion"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_start_scan" />

    <Button
        android:id="@+id/button_toggle_led"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_led"
        app:layout_constraintBottom_toTopOf="@id/button_start_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>